Replace Guava collection helpers