@@ -4,7 +4,6 @@ import com.aetherteam.aether.Aether;
 import com.aetherteam.aether.AetherTags;
 import com.aetherteam.aether.block.AetherBlocks;
 import com.aetherteam.aether.world.structurepiece.AetherTemplateStructurePiece;
-import com.google.common.collect.ImmutableList;
 import net.minecraft.core.BlockPos;
 import net.minecraft.core.Direction;
 import net.minecraft.core.Holder;
@@ -15,6 +14,7 @@ import net.minecraft.resources.Identifier;
 import net.minecraft.world.level.levelgen.structure.pieces.StructurePieceType;
 import net.minecraft.world.level.levelgen.structure.templatesystem.*;
 
+import java.util.List;
 import java.util.function.Function;
 
 /**
@@ -25,14 +25,14 @@ public abstract class BronzeDungeonPiece extends AetherTemplateStructurePiece {
     // This helps Bronze Dungeons merge more cleanly when they overlap, and blends the tunnels in with the landscape.
     public static final ProtectedBlockProcessor AVOID_DUNGEONS = new ProtectedBlockProcessor(BuiltInRegistries.BLOCK.getOrThrow(AetherTags.Blocks.NON_BRONZE_DUNGEON_REPLACEABLE));
 
-    public static final RuleProcessor LOCKED_SENTRY_STONE = new RuleProcessor(ImmutableList.of(
+    public static final RuleProcessor LOCKED_SENTRY_STONE = new RuleProcessor(List.of(
             new ProcessorRule(new RandomBlockMatchTest(AetherBlocks.LOCKED_CARVED_STONE, 0.05F), AlwaysTrueTest.INSTANCE, AetherBlocks.LOCKED_SENTRY_STONE.defaultBlockState())
     ));
-    public static final RuleProcessor BRONZE_DUNGEON_STONE = new RuleProcessor(ImmutableList.of(
+    public static final RuleProcessor BRONZE_DUNGEON_STONE = new RuleProcessor(List.of(
             new ProcessorRule(new RandomBlockMatchTest(AetherBlocks.CARVED_STONE, 0.1F), AlwaysTrueTest.INSTANCE, AetherBlocks.SENTRY_STONE.defaultBlockState()),
             new ProcessorRule(new RandomBlockMatchTest(AetherBlocks.HOLYSTONE, 0.2F), AlwaysTrueTest.INSTANCE, AetherBlocks.MOSSY_HOLYSTONE.defaultBlockState())
     ));
-    public static final RuleProcessor TRAPPED_CARVED_STONE = new RuleProcessor(ImmutableList.of(
+    public static final RuleProcessor TRAPPED_CARVED_STONE = new RuleProcessor(List.of(
             new ProcessorRule(new RandomBlockMatchTest(AetherBlocks.CARVED_STONE, 0.13F), AlwaysTrueTest.INSTANCE, ON_FLOOR, AetherBlocks.TRAPPED_CARVED_STONE.defaultBlockState()),
             new ProcessorRule(new RandomBlockMatchTest(AetherBlocks.SENTRY_STONE, 0.003F), AlwaysTrueTest.INSTANCE, ON_FLOOR, AetherBlocks.TRAPPED_SENTRY_STONE.defaultBlockState())
     ));
