@@ -1,6 +1,5 @@
 package com.aetherteam.aether.world.trunkplacer;
 
-import com.google.common.collect.ImmutableList;
 import com.mojang.serialization.MapCodec;
 import com.mojang.serialization.codecs.RecordCodecBuilder;
 import net.minecraft.core.BlockPos;
@@ -46,7 +45,7 @@ public class GoldenOakTrunkPlacer extends TrunkPlacer {
             }
             this.placeLog(level, blockSetter, random, pos.above(i), config);
         }
-        return ImmutableList.of(new FoliagePlacer.FoliageAttachment(pos.above(height), 0, false));
+        return List.of(new FoliagePlacer.FoliageAttachment(pos.above(height), 0, false));
     }
 
     /**
